tests/baselines/reference/typeParameterOrderReversal.errors.txt
==== tests/cases/compiler/typeParameterOrderReversal.ts (2 errors) ====
    interface X<T> {
        n: T;
    }
    
    // Only difference here is order of type parameters
    function uFirst<U extends X<T>, T>(x: U) { }
                    ~~~~~~~~~~~~~~
!!! error TS2313: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
    function tFirst<T, U extends X<T>>(x: U) { }
                       ~~~~~~~~~~~~~~
!!! error TS2313: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
    var z: X<number> = null;
    
    // Both of these should be allowed
    uFirst(z);
    tFirst(z);
    